// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompanyOverview Snapshot > renders with a long company excerpt correctly 1`] = `
<div>
  <div class="
    flex
    flex-col
    gap-6
    justify-between
    lg:gap-4
    md:flex-row
    md:gap-3
    xl:gap-6
  ">
    <!-- Right Column: Overview and Details -->
    <section class="
      md:flex-1
      w-full
    ">
      <p class="
        leading-relaxed
        mb-4
        text-md
      ">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </p>
    </section>
  </div>
</div>
`;

exports[`CompanyOverview Snapshot > renders with a normal company excerpt correctly 1`] = `
<div>
  <div class="
    flex
    flex-col
    gap-6
    justify-between
    lg:gap-4
    md:flex-row
    md:gap-3
    xl:gap-6
  ">
    <!-- Right Column: Overview and Details -->
    <section class="
      md:flex-1
      w-full
    ">
      <p class="
        leading-relaxed
        mb-4
        text-md
      ">
        Leading the industry with innovative solutions.
      </p>
    </section>
  </div>
</div>
`;

exports[`CompanyOverview Snapshot > renders with an empty excerpt correctly 1`] = `
<div>
  <div class="
    flex
    flex-col
    gap-6
    justify-between
    lg:gap-4
    md:flex-row
    md:gap-3
    xl:gap-6
  ">
    <!-- Right Column: Overview and Details -->
    <section class="
      md:flex-1
      w-full
    ">
      <p class="
        leading-relaxed
        mb-4
        text-md
      "></p>
    </section>
  </div>
</div>
`;
